--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,10 @@
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
-# testing
-/coverage
-
-# production
-/build
+# build outputs
 /.next
 /out
-
-# misc
-.DS_Store
-Thumbs.db
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+/build
 
 # env
 .env.local
@@ -27,17 +12,26 @@ lerna-debug.log*
 .env.test.local
 .env.production.local
 
-# vscode
+# logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# misc
+.DS_Store
+Thumbs.db
+
+# editor
 .vscode/*
 !.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
 
 # vercel
 .vercel
 
 # lock files (optional: keep if you want reproducible installs)
-# package-lock.json
-# yarn.lock
-# pnpm-lock.yaml
+/package-lock.json
+/yarn.lock
+/pnpm-lock.yaml
