--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,41 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
 /node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# build outputs
-/.next
-/out
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
 /build
-
-# env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
 # misc
 .DS_Store
-Thumbs.db
+*.pem
 
-# editor
-.vscode/*
-!.vscode/settings.json
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# env files (can opt-in for committing if needed)
+.env*
 
 # vercel
 .vercel
 
-# lock files (optional: keep if you want reproducible installs)
-/package-lock.json
-/yarn.lock
-/pnpm-lock.yaml
+# typescript
+*.tsbuildinfo
+next-env.d.ts
